Mon Oct 20 11:31:14 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/megatec.c, man/megatec.8: Adds a "battvoltmult" parameter to the
   megatec driver (based on a patch from Carlos Rodrigues)

Sun Oct 19 09:59:06 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/tripplite-hid.c, scripts/hal/ups-nut-device.fdi,
   scripts/hotplug/libhid.usermap, scripts/udev/nut-usbups.rules.in: Add
   an additional productid for Tripp-Lite SMART2200RXML2U.

Sat Oct 18 17:15:20 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

  - data/driver.list: Add the Delta GES602N. Reported working by Jerome Benoit.

Tue Oct 14 14:00:00 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - driver.list: add the full Eaton range (addressing MGE Office Protection
   Systems), and the Protection Station from MGE Office Protection Systems.

Fri Oct 10 20:43:32 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - data/driver.list, drivers/tripplite-hid.c, scripts/hal/ups-nut-device.fdi
   scripts/hotplug/libhid.usermap, scripts/udev/nut-usbups.rules.in: add 
   support for Tripp-Lite AVR750U (patch provided by Raphael Geissert)
 - data/driver.list: add support for HP PowerTrust 2997A

Fri Sep 26 00:24:26 UTC 2008 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - data/driver.list: added several UPS models.
 - man/megatec_usb.8: fixed battvolts description as suggested by
   Jamie Thompson.

Wed Sep 24 18:18:31 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups.[ch]:
   - Fix server side variables 'ups.delay.start' and 'ups.delay.shutdown'
     so that they won't show if the underlying HID path needed to use
     them is not available.
   - The 'load.on' and 'load.off' commands only need 'ups.delay.start'
     and 'ups.delay.shutdown' respectively (not both).
   - Fallback to 'load.off.delay' if both 'shutdown.return' and
     'shutdown.reboot' fail to shutdown the UPS.

Mon Sep 22 18:01:50 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
