@@ -289,7 +289,7 @@ write.  You could call write directly, but using this function allows
 for future error handling in one place.
 
 
- - unsigned int ser_send_pace(int fd, unsigned long d_usec, 
+ - int ser_send_pace(int fd, unsigned long d_usec, 
 	const char *fmt, ...)
 
 If you need to send a formatted buffer with an intercharacter delay, use
@@ -302,7 +302,7 @@ The return value is the number of characters that was sent to the port,
 or -1 if something failed.
 
 
- - unsigned int ser_send(int fd, const char *fmt, ...)
+ - int ser_send(int fd, const char *fmt, ...)
 
 Like ser_send_pace, but without a delay.  Only use this if you're sure
 that your UPS can handle characters at the full line rate.
@@ -323,8 +323,8 @@ This is just ser_send_buf with an intercharacter delay.
  - int ser_get_char(int fd, char *ch, long d_sec, long d_usec)
 
 This will wait up to d_sec seconds + d_usec microseconds for one
-character to arrive, storing it at ch.  It returns 1 on success, or -1
-if something fails, including a timeout.
+character to arrive, storing it at ch.  It returns 1 on success, -1
+if something fails and 0 on a timeout.
 
 Note: the delay value must not be too large, or your driver will not get
 back to the usual idle loop in main in time to answer the PINGs from
@@ -337,8 +337,8 @@ behavior.
 
 Like ser_get_char, but this one waits for buflen bytes to arrive,
 storing all of them in buf.  The buffer is zeroed regardless of success
-or failure.  It returns the number of bytes read or -1 on failure,
-including a timeout.
+or failure.  It returns the number of bytes read, -1 on failure
+and 0 on a timeout.
 
 This should only be used for binary reads.  See ser_get_line for
 protocols that are terminated by characters like CR or LF.
@@ -352,7 +352,8 @@ responses like "OK\r" or "1234\n".  It reads up to buflen bytes and
 stores them in buf, but it will return immediately if it encounters
 endchar.  The endchar will not be stored in the buffer.  It will also
 return if it manages to collect a full buffer before reaching the
-endchar.  
+endchar.  It returns the number of bytes stored in the buffer, -1 on
+failure and 0 on a timeout.
 
 If the character matches the ignset with strchr(), it will not be added
 to the buffer.  If you don't need to ignore any characters, just pass it
@@ -365,7 +366,7 @@ Note: any other data which is read after the endchar in the serial
 buffer will be lost forever.  As a result, you should not use this 
 unless your UPS uses a polled protocol.
 
-Let's say your endchar is \n and your UPS sends "OK\n1234\nabcd\n".   
+Let's say your endchar is \n and your UPS sends "OK\n1234\nabcd\n".
 This function will read() all of that, find the first \n, and stop
 there.  Your driver will get "OK", and the rest is gone forever.
 
